homeology packaged verified installable and documentation updated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ S3method(length,gMatrix)
 S3method(length,gPair)
 S3method(log,gMatrix)
 S3method(max,gMatrix)
+S3method(merge,gMatrix)
 S3method(min,gMatrix)
 S3method(round,gMatrix)
 S3method(sign,gMatrix)
@@ -48,7 +49,7 @@ export(grpois)
 export(grunif)
 export(hicpro)
 export(homeology)
-export(merge.gMatrix)
+export(homeology.event)
 export(refresh)
 export(straw)
 exportMethods("%$%")
@@ -62,11 +63,67 @@ import(GenomicRanges)
 import(Matrix)
 import(R6)
 import(data.table)
+import(futile.logger)
+import(gGnome)
 import(gTrack)
 import(gUtils)
+import(ggplot2)
+import(httr)
 import(igraph)
+import(khtools)
 import(methods)
+import(parallel)
 import(strawr)
+importFrom(BiocGenerics,width)
+importFrom(GenomeInfoDb,"seqinfo<-")
+importFrom(GenomeInfoDb,"seqlengths<-")
+importFrom(GenomeInfoDb,"seqlevels<-")
+importFrom(GenomeInfoDb,"seqlevelsStyle<-")
+importFrom(GenomeInfoDb,"seqnames<-")
+importFrom(GenomeInfoDb,Seqinfo)
+importFrom(GenomeInfoDb,seqinfo)
+importFrom(GenomeInfoDb,seqlengths)
+importFrom(GenomeInfoDb,seqlevels)
+importFrom(GenomeInfoDb,seqlevelsStyle)
+importFrom(GenomeInfoDb,seqnames)
+importFrom(GenomicRanges,GRanges)
+importFrom(GenomicRanges,GRangesList)
 importFrom(Rcpp,sourceCpp)
+importFrom(gUtils,"%$%")
+importFrom(gUtils,"%*%")
+importFrom(gUtils,"%Q%")
+importFrom(gUtils,dt2gr)
+importFrom(gUtils,gr.chr)
+importFrom(gUtils,gr.findoverlaps)
+importFrom(gUtils,gr.nochr)
+importFrom(gUtils,gr.val)
+importFrom(gUtils,gr2dt)
+importFrom(magrittr,"%>%")
+importFrom(parallel,mclapply)
 importFrom(reshape2,melt)
+importFrom(rtracklayer,TwoBitFile)
+importMethodsFrom(BiocGenerics,sort)
+importMethodsFrom(BiocGenerics,width)
+importMethodsFrom(GenomeInfoDb,"seqinfo<-")
+importMethodsFrom(GenomeInfoDb,"seqlengths<-")
+importMethodsFrom(GenomeInfoDb,"seqlevels<-")
+importMethodsFrom(GenomeInfoDb,"seqlevelsStyle<-")
+importMethodsFrom(GenomeInfoDb,"seqnames<-")
+importMethodsFrom(GenomeInfoDb,seqinfo)
+importMethodsFrom(GenomeInfoDb,seqlengths)
+importMethodsFrom(GenomeInfoDb,seqlevels)
+importMethodsFrom(GenomeInfoDb,seqlevelsStyle)
+importMethodsFrom(GenomeInfoDb,seqnames)
+importMethodsFrom(GenomeInfoDb,sortSeqlevels)
+importMethodsFrom(GenomicRanges,end)
+importMethodsFrom(GenomicRanges,start)
+importMethodsFrom(IRanges,end)
+importMethodsFrom(IRanges,start)
+importMethodsFrom(IRanges,trim)
+importMethodsFrom(MatrixGenerics,rowRanges)
+importMethodsFrom(S4Vectors,"mcols<-")
+importMethodsFrom(S4Vectors,"values<-")
+importMethodsFrom(S4Vectors,mcols)
+importMethodsFrom(S4Vectors,split)
+importMethodsFrom(S4Vectors,values)
 useDynLib(GxG)
