documentation sync and exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(grunif)
 export(hicpro)
 export(homeology)
 export(homeology.event)
+export(homeology.wrapper)
 export(refresh)
 export(straw)
 exportMethods("%$%")
